add cmake scripts
Signed-off-by: Martin Bark <martin@barkynet.com>

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,11 @@ core
 /traceroute6
 # Meson build
 /builddir
+# cmake
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Makefile
+cmake_install.cmake
+install_manifest.txt
+CTestTestfile.cmake
